# antevorta

./: .dockerignore  .gitignore  Dockerfile  base_resources.json  main.py  pyproject.toml
api/: api.py  semaphore.py
config/: config.py
core/: directus.py  discover.py  output.py  output_directus.py  types.py
