[tool.poetry]
name = "antevorta"
version = "0.1.0"
description = ""
authors = ["Bregy Malpartida <bregy@minsky.cc>"]

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.6"
aiohttp = "^3.8.1"
beautifulsoup4 = "^4.10.0"
yake = {git = "https://github.com/LIAAD/yake"}
fastapi = {extras = ["all"], version = "^0.75.0"}
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 180